# gmail-read

./: .gitignore  README.md  gmail_read.py  pyproject.toml
